Added @implNote. Check "JRE" as well. Clean-up